--- a/blog/templates/blog/includes/super_buttons.html
+++ b/blog/templates/blog/includes/super_buttons.html
@@ -1,4 +1,4 @@
-{% block superButtons %}
+{% block super_buttons %}
     {% if user.is_superuser %}
 
         <div class="btn-group float-end">
@@ -34,4 +34,4 @@
             </ul>
         </div>
     {% endif %}
-{% endblock superButtons %}
+{% endblock super_buttons %}
