--- a/khoBlog/static/khoBlog/css/_custom.scss
+++ b/khoBlog/static/khoBlog/css/_custom.scss
@@ -20,6 +20,10 @@ $font-family: $font-family-base;
     color: #fff !important;
 }
 
+.nav-link.text-muted:hover {
+    text-decoration: underline;
+}
+
 @import '../../vendor/node_modules/bootstrap/scss/bootstrap.scss';
 
 /* Personnalisation des éléments */
