--- a/blog/templates/blog/base_post.html
+++ b/blog/templates/blog/base_post.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'sub_base.html' %}
 
 {% block title %}
     {% with request.resolver_match.view_name as view_name %}
