--- a/khoBlog/templates/account/change_password.html
+++ b/khoBlog/templates/account/change_password.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "sub_base.html" %}
 {% load bootstrap5 %}
 
 {% block title %} - Change Password{% endblock title %}
