--- a/pages/templates/pages/base_page.html
+++ b/pages/templates/pages/base_page.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'sub_base.html' %}
 
 {% block title %}
     {% with request.resolver_match.view_name as view_name %}
