--- a/portfolio/templates/portfolio/base_projects.html
+++ b/portfolio/templates/portfolio/base_projects.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'sub_base.html' %}
 
 {% block title %}
     {% with request.resolver_match.view_name as view_name %}
