--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -160,7 +160,7 @@
                                 <li><a class="dropdown-item" href="{% url 'accounts:profile' slug=user.slug %}">Your Profile</a></li>
                                 <li><a class="dropdown-item" href="{% url 'accounts:edit_profile' slug=user.slug %}">Edit your Profile</a></li>
                                 <li><a class="dropdown-item" href="{% url 'accounts:profile' slug=user.slug %}?view_as=guest">View Profile as Guest</a></li>
-                                <li><a class="dropdown-item" href="{% url 'account_login' %}">Lot out</a></li>
+                                <li><a class="dropdown-item" href="{% url 'account_logout' %}">Lot out</a></li>
                             </ul>
                         </li>
 
