--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -47,24 +47,15 @@
     <meta property="og:image" content="{% static 'khoBlog/img/RuthinkkTooBig.png' %}">
     <meta property="twitter:image" content="{% static 'khoBlog/img/RuthinkkTooBig.png' %}">
 
-    {% block page_head %}
-        <!-- Primary Meta Tags -->
-        <meta name="title" content="{{ title }}">
-        <meta name="description"
-              content="Khodok's Blog was a simple test for Django for school at first before Khodok (the dev of this stupid website) started to like it and continued it as a personal project">
+    <meta content="Discord - Free Voice and Text Chat" property="og:title">
 
-        <!-- Open Graph / Facebook -->
-        <meta property="og:url" content="{{ CANONICAL_PATH }}"/>
-        <meta property="og:title" content="{{ title }}">
-        <meta property="og:description"
-              content="Khodok's Blog was a simple test for Django for school at first before Khodok (the dev of this stupid website) started to like it and continued it as a personal project">
+    <meta content="All-in-one voice and text chat for gamers that's free, secure, and works on both your desktop and phone.
 
-        <!-- Twitter -->
-        <meta property="twitter:url" content="{{ CANONICAL_PATH }}">
-        <meta property="twitter:title" content="{{ title }}">
-        <meta property="twitter:description"
-              content="Khodok's Blog was a simple test for Django for school at first before Khodok (the dev of this stupid website) started to like it and continued it as a personal project">
-    {% endblock page_head %}
+    Stop paying for TeamSpeak servers and hassling with Skype. Simplify your life." property="og:description">
+
+    <meta content='https://discordapp.com/assets/ba74954dde74ff40a32ff58069e78c36.png' property='og:image'>
+
+    <link type="application/json+oembed" href="https://owo.whats-th.is//e61180.json" />
 
     <meta name="theme-color" content="#B362FF">
     <link rel="alternate" type="application/json+oembed" href="{% static 'khoBlog/js/oembed/oembed.json' %}"
