still again still

--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -67,7 +67,7 @@
     {% endblock page_head %}
 
     <meta name="theme-color" content="#B362FF">
-    <link type="application/json+oembed" href="{% static 'khoBlog/js/oembed/oembed.json' %}"
+    <link type="application/json+oembed" href="https://blog.khodok.xyz/static/khoBlog/js/oembed/oembed.json"
           title="oEmbed Profile: JSON">
 
     <title>
