--- a/blog/templates/blog/category_list.html
+++ b/blog/templates/blog/category_list.html
@@ -3,41 +3,50 @@
 {% load markdown_extra %}
 
 {% block content_main %}
-    {% for cat in category_list %}
-        <div class="card text-white border-secondary bg-dark mb-2 shadow">
-            <div class="card-header border-secondary">
-                <h2>Category #{{ cat.id }}
-                    {% block super_buttons %}
-                        {% if user.is_superuser %}
-                            <div class="float-end btn-group" role="group" aria-label="Edit Group">
-                                <a class="btn btn-light" href="{% url 'blog:category_edit' slug=cat.slug %}">
-                                    <i class="bi bi-pencil-square"></i>
-                                </a>
+    <div class="row row-cols-1 row-cols-lg-3">
+        {% for cat in category_list %}
+            <div class="card-deck mb-2 {% cycle 'pe-lg-0' 'pe-lg-0' 'pe-kho-lg-12' %}">
+                <div id="cat-{{ cat.slug }}" class="card bg-dark border-secondary shadow h-100">
 
-                                <a class="btn btn-danger" href="{% url 'admin:blog_category_change' object_id=cat.id %}">
-                                    <i class="bi bi-pencil-square"></i>
-                                </a>
-                            </div>
-                        {% endif %}
-                    {% endblock super_buttons %}
-                </h2>
-            </div>
+                    <div class="card-header border-secondary">
+                        <span class="d-flex">
+                            <span class="col">
+                                <strong class="text-muted"><a class="text-muted" href="{% url 'blog:latest_category_post_feed' slug=cat.slug %}">Category #{{ cat.id }}</a></strong>
+                                <p class="mb-0 text-muted">Category Post Count: {{ cat.category_to_post.count }}</p>
+                            </span>
+                            <span class="col">
+                                {% block super_buttons %}
+                                    {% if user.is_superuser %}
+                                        <div class="float-end btn-group" role="group" aria-label="Edit Group">
+                                            <a class="btn btn-light" href="{% url 'blog:category_edit' slug=cat.slug %}">
+                                                <i class="bi bi-pencil-square"></i>
+                                            </a>
 
-            <div class="card-body">
-                <h2 class="card-title">{{ cat }}</h2>
-                <div class="blog-post-meta">
-                    Category Slug: {{ cat.slug }}
-                    <br/>
-                    Category Post Count: {{ cat.category_to_post.count }}
+                                            <a class="btn btn-danger" href="{% url 'admin:blog_category_change' object_id=cat.id %}">
+                                                <i class="bi bi-pencil-square"></i>
+                                            </a>
+                                        </div>
+                                    {% endif %}
+                                {% endblock super_buttons %}
+                            </span>
+                        </span>
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">{{ cat.name }}</h3>
+                        <p class="mb-auto">{{ cat.description }}</p>
+                        <p class="mb-auto">Category Slug: {{ cat.slug }}</p>
+                    </div>
+                    <div class="card-footer border-secondary">
+                        <span class="d-flex">
+                            <span class="col">
+                                <a href="{{ cat.get_absolute_url }}">See all posts in this Category</a>
+                            </span>
+                        </span>
+                    </div>
                 </div>
-                <p class="card-text">{{ cat.description }}</p>
             </div>
-
-            <div class="card-footer border-secondary">
-                <a href="{{ cat.get_absolute_url }}" class="btn btn-primary">See all posts in this Category</a>
-            </div>
-        </div>
-    {% endfor %}
+        {% endfor %}
+    </div>
 {% endblock content_main %}
 
 {% block pagination %}
